tests/requests/snapshots/can_delete_post@post_request.snap
---
source: tests/requests/posts.rs
expression: "(post.status_code(), post.text())"
---
(
    200,
    "",
)
