tests/requests/snapshots/can_get_no_post@post_request.snap
---
source: tests/requests/posts.rs
expression: "(post.status_code(), post.text())"
---
(
    404,
    "{\"error\":\"not_found\",\"description\":\"Resource was not found\"}",
)
