tests/requests/snapshots/can_get_no_posts@post_request.snap
---
source: tests/requests/posts.rs
expression: "(posts.status_code(), posts.text())"
---
(
    200,
    "[]",
)
