tests/requests/snapshots/can_get_one_post@post_request.snap
---
source: tests/requests/posts.rs
expression: "(post.status_code(), post.text())"
---
(
    200,
    "{\"id\":ID,\"title\":\"loco\",\"description\":\"loco post test description\",\"content\":\"loco post test\",\"created_at\":\"DATE\",\"updated_at\":\"DATE\",\"author\":\{\"id\":\"AUTHOR_ID\",\"name\":\"loco\"}}",
)
