tests/requests/snapshots/can_get_posts@post_request.snap
---
source: tests/requests/posts.rs
expression: "(posts.status_code(), posts.text())"
---
(
    200,
    "[{\"created_at\":\"DATE\",\"updated_at\":\"DATE\",\"id\":ID,\"title\":\"loco\",\"description\":\"loco post test description\",\"content\":\"loco post test\",\"user_id\":USER_ID}]",
)
