tests/requests/snapshots/can_get_user_posts@post_request.snap
---
source: tests/requests/posts.rs
expression: "(posts.status_code(), posts.text())"
---
(
    200,
    "[{\"id\":ID,\"title\":\"loco\",\"description\":\"loco post test description\",\"content\":\"loco post test\",\"created_at\":\"DATE\",\"updated_at\":\"DATE\"},{\"id\":ID,\"title\":\"loco2\",\"description\":\"loco post test description2\",\"content\":\"loco post test2\",\"created_at\":\"DATE\",\"updated_at\":\"DATE\"}]",
)
