tests/requests/snapshots/can_update_post@post_request.snap
---
source: tests/requests/posts.rs
expression: "(post.status_code(), post.text())"
---
(
    200,
    "{\"created_at\":\"DATE\",\"updated_at\":\"DATE\",\"id\":ID,\"title\":\"loco updated\",\"description\":\"loco post test description updated\",\"content\":\"loco post test updated\",\"user_id\":USER_ID}",
)
