tests/requests/snapshots/cannot_create_post_without_login@post_request.snap
---
source: tests/requests/posts.rs
expression: "(add_post_request.status_code(), add_post_request.text())"
---
(
    401,
    "{\"error\":\"unauthorized\",\"description\":\"You do not have permission to access this resource\"}",
)
