tests/requests/snapshots/cannot_create_series_with_posts_of_other_owner@post_request.snap
---
source: tests/requests/series.rs
expression: "(add_series_request.status_code(), add_series_request.text())"
---
(
    401,
    "{\"error\":\"unauthorized\",\"description\":\"You do not have permission to access this resource\"}",
)
