tests/requests/snapshots/cannot_delete_post_if_not_owner@post_request.snap
---
source: tests/requests/posts.rs
expression: "(post.status_code(), post.text())"
---
(
    401,
    "{\"error\":\"unauthorized\",\"description\":\"You do not have permission to access this resource\"}",
)
